--- a/docs/cifar100.ipynb
+++ b/docs/cifar100.ipynb
@@ -15,7 +15,42 @@
    "source": [
     "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
     "\n",
-    "Run following commands in the root path of `benchmark-lightly`."
+    "Run following commands in the root path of `benchmark-lightly`.\n",
+    "\n",
+    "```bash\n",
+    "function cmd(){\n",
+    "    fed_optim=$1\n",
+    "\n",
+    "    task_name=\"cifar100\"\n",
+    "    exp_name=${fed_optim}_${task_name}\n",
+    "\n",
+    "    # Delete cache file\n",
+    "    rm -rf /tmp/${exp_name}.share\n",
+    "    rm -rf /tmp/${exp_name}\n",
+    "    rm -rf ./logs/${task_name}/${fed_optim}\n",
+    "\n",
+    "    # Run\n",
+    "    python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "        --fed_init_method file:///tmp/${exp_name}.share\\\n",
+    "        --task ${task_name}\\\n",
+    "        --data_root benchmark/datasets/${task_name}/data\\\n",
+    "        --epochs 1\\\n",
+    "        --rounds 20\\\n",
+    "        --act_clts 100\\\n",
+    "        --tst_act_clts 100\\\n",
+    "        --max_acg_step -1\\\n",
+    "        --optim ${fed_optim}\\\n",
+    "        --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "        --follower_lr 1e-1\\\n",
+    "        --leader_lr 1.0\\\n",
+    "        --bz 10\\\n",
+    "        --gpu\\\n",
+    "        --log_level SUCCESS\\\n",
+    "        --log_dir logs\\\n",
+    "        --exp_name ${exp_name}\\\n",
+    "        --seed 0\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -26,32 +61,7 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
-    "task_name=\"cifar100\"\n",
-    "fed_optim=\"fedavg\"\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedavg'\n",
     "```"
    ]
   },
@@ -63,32 +73,7 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
-    "task_name=\"cifar100\"\n",
-    "fed_optim=\"fedsgd\"\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedsgd'\n",
     "```"
    ]
   },
@@ -100,32 +85,7 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
-    "task_name=\"cifar100\"\n",
-    "fed_optim=\"fedela\"\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedela'\n",
     "```"
    ]
   },
@@ -137,32 +97,7 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
-    "task_name=\"cifar100\"\n",
-    "fed_optim=\"fedprox\"\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedprox'\n",
     "```"
    ]
   },
@@ -174,32 +109,7 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
-    "task_name=\"cifar100\"\n",
-    "fed_optim=\"fedscaffold\"\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${fed_optim}_${task_name}.share\n",
-    "rm -rf /tmp/${task_name}/${fed_optim}_${task_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}_${task_name}\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${fed_optim}_${task_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --follower_lr 1e-2\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${fed_optim}_${task_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedscaffold'\n",
     "```"
    ]
   },
@@ -222,7 +132,18 @@
     "\n",
     "from benchmark.utils.plot import plot\n",
     "\n",
-    "task_name = \"cifar100\""
+    "task_name = \"celeba\"\n",
+    "\n",
+    "items = dict(\n",
+    "    FedAvg=f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
+    "    FedSgd=f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
+    "    FedEla=f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
+    "    FedProx=f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
+    "    FedScaffold=f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
+    ")\n",
+    "\n",
+    "files = items.values()\n",
+    "labels = items.keys()"
    ]
   },
   {
@@ -241,20 +162,8 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"accuracy\",\n",
     "    mode='train'\n",
     ")"
@@ -276,20 +185,8 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"loss\",\n",
     "    mode=\"train\"\n",
     ")"
@@ -311,20 +208,8 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"accuracy\",\n",
     "    mode=\"test\"\n",
     ")"
@@ -346,20 +231,8 @@
    "outputs": [],
    "source": [
     "plot(\n",
-    "    files=[\n",
-    "        f'../logs/{task_name}/fedavg_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedsgd_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedela_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedprox_{task_name}/{task_name}.json',\n",
-    "        f'../logs/{task_name}/fedscaffold_{task_name}/{task_name}.json',\n",
-    "    ],\n",
-    "    labels=[\n",
-    "        'FedAvg',\n",
-    "        'FedSgd',\n",
-    "        'FedEla',\n",
-    "        'FedProx',\n",
-    "        'FedScaffold',\n",
-    "    ],\n",
+    "    files=files,\n",
+    "    labels=labels,\n",
     "    attributes=\"loss\",\n",
     "    mode='test'\n",
     ")"
