--- a/docs/synthetic.ipynb
+++ b/docs/synthetic.ipynb
@@ -15,7 +15,42 @@
    "source": [
     "## FedAvg, FedSGD, FedEla, FedProx, FedScaffold\n",
     "\n",
-    "Run following commands in the root path of `benchmark-lightly`."
+    "Run following commands in the root path of `benchmark-lightly`.\n",
+    "\n",
+    "```bash\n",
+    "function cmd(){\n",
+    "    fed_optim=$1\n",
+    "\n",
+    "    task_name=\"synthetic\"\n",
+    "    exp_name=${fed_optim}_${task_name}\n",
+    "\n",
+    "    # Delete cache file\n",
+    "    rm -rf /tmp/${exp_name}.share\n",
+    "    rm -rf /tmp/${exp_name}\n",
+    "    rm -rf ./logs/${task_name}/${fed_optim}\n",
+    "\n",
+    "    # Run\n",
+    "    python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
+    "        --fed_init_method file:///tmp/${exp_name}.share\\\n",
+    "        --task ${task_name}\\\n",
+    "        --data_root benchmark/datasets/${task_name}/data\\\n",
+    "        --epochs 1\\\n",
+    "        --rounds 20\\\n",
+    "        --act_clts 100\\\n",
+    "        --tst_act_clts 100\\\n",
+    "        --max_acg_step -1\\\n",
+    "        --optim ${fed_optim}\\\n",
+    "        --optim_args momentum:0.9 weight_decay:1e-4\\\n",
+    "        --follower_lr 1e-1\\\n",
+    "        --leader_lr 1.0\\\n",
+    "        --bz 10\\\n",
+    "        --gpu\\\n",
+    "        --log_level SUCCESS\\\n",
+    "        --log_dir logs\\\n",
+    "        --exp_name ${exp_name}\\\n",
+    "        --seed 0\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -26,36 +61,7 @@
     "### FedAvg\n",
     "\n",
     "```bash\n",
-    "fed_optim=\"fedavg\"\n",
-    "\n",
-    "task_name=\"synthetic\"\n",
-    "exp_name=${fed_optim}_${task_name}\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${exp_name}.share\n",
-    "rm -rf /tmp/${exp_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}\n",
-    "\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "    --follower_lr 1e-1\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${exp_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedavg'\n",
     "```"
    ]
   },
@@ -67,36 +73,7 @@
     "### FedSgd\n",
     "\n",
     "```bash\n",
-    "fed_optim=\"fedsgd\"\n",
-    "\n",
-    "task_name=\"synthetic\"\n",
-    "exp_name=${fed_optim}_${task_name}\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${exp_name}.share\n",
-    "rm -rf /tmp/${exp_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}\n",
-    "\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "    --follower_lr 1e-1\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${exp_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedsgd'\n",
     "```"
    ]
   },
@@ -108,36 +85,7 @@
     "### FedEla\n",
     "\n",
     "```bash\n",
-    "fed_optim=\"fedela\"\n",
-    "\n",
-    "task_name=\"synthetic\"\n",
-    "exp_name=${fed_optim}_${task_name}\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${exp_name}.share\n",
-    "rm -rf /tmp/${exp_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}\n",
-    "\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "    --follower_lr 1e-1\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${exp_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedela'\n",
     "```"
    ]
   },
@@ -149,36 +97,7 @@
     "### FedProx\n",
     "\n",
     "```bash\n",
-    "fed_optim=\"fedprox\"\n",
-    "\n",
-    "task_name=\"synthetic\"\n",
-    "exp_name=${fed_optim}_${task_name}\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${exp_name}.share\n",
-    "rm -rf /tmp/${exp_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}\n",
-    "\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "    --follower_lr 1e-1\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${exp_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedprox'\n",
     "```"
    ]
   },
@@ -190,36 +109,7 @@
     "### FedScaffold\n",
     "\n",
     "```bash\n",
-    "fed_optim=\"fedscaffold\"\n",
-    "\n",
-    "task_name=\"synthetic\"\n",
-    "exp_name=${fed_optim}_${task_name}\n",
-    "\n",
-    "# Delete cache file\n",
-    "rm -rf /tmp/${exp_name}.share\n",
-    "rm -rf /tmp/${exp_name}\n",
-    "rm -rf ./logs/${task_name}/${fed_optim}\n",
-    "\n",
-    "# Run\n",
-    "python -m openfed.tools.launch --nproc_per_node 6  --logdir /tmp benchmark/run.py\\\n",
-    "    --fed_init_method file:///tmp/${exp_name}.share\\\n",
-    "    --task ${task_name}\\\n",
-    "    --data_root benchmark/datasets/${task_name}/data\\\n",
-    "    --epochs 1\\\n",
-    "    --rounds 20\\\n",
-    "    --act_clts 100\\\n",
-    "    --tst_act_clts 100\\\n",
-    "    --max_acg_step -1\\\n",
-    "    --optim ${fed_optim}\\\n",
-    "    --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "    --follower_lr 1e-1\\\n",
-    "    --leader_lr 10.0\\\n",
-    "    --bz 10\\\n",
-    "    --gpu\\\n",
-    "    --log_level SUCCESS\\\n",
-    "    --log_dir logs\\\n",
-    "    --exp_name ${exp_name}\\\n",
-    "    --seed 0\n",
+    "cmd 'fedscaffold'\n",
     "```"
    ]
   },
