--- a/docs/cifar100.ipynb
+++ b/docs/cifar100.ipynb
@@ -35,13 +35,13 @@
     "        --task ${task_name}\\\n",
     "        --data_root benchmark/datasets/${task_name}/data\\\n",
     "        --epochs 1\\\n",
-    "        --rounds 20\\\n",
-    "        --act_clts 100\\\n",
-    "        --tst_act_clts 100\\\n",
+    "        --rounds 4000\\\n",
+    "        --act_clts 10\\\n",
+    "        --tst_act_clts 10\\\n",
     "        --max_acg_step -1\\\n",
     "        --optim ${fed_optim}\\\n",
     "        --optim_args momentum:0.9 weight_decay:1e-4\\\n",
-    "        --follower_lr 1e-1\\\n",
+    "        --follower_lr 0.05\\\n",
     "        --leader_lr 1.0\\\n",
     "        --bz 10\\\n",
     "        --gpu\\\n",
@@ -58,58 +58,10 @@
    "id": "0c5f9be7",
    "metadata": {},
    "source": [
-    "### FedAvg\n",
+    "### Run All\n",
     "\n",
     "```bash\n",
-    "cmd 'fedavg'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e24a8759",
-   "metadata": {},
-   "source": [
-    "### FedSgd\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedsgd'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6048188c",
-   "metadata": {},
-   "source": [
-    "### FedEla\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedela'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99a24993",
-   "metadata": {},
-   "source": [
-    "### FedProx\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedprox'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98960ebe",
-   "metadata": {},
-   "source": [
-    "### FedScaffold\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedscaffold'\n",
+    "cmd 'fedavg'; cmd 'fedsgd'; cmd 'fedela'; cmd 'fedprox'; cmd 'fedscaffold'\n",
     "```"
    ]
   },
