--- a/docs/celeba.ipynb
+++ b/docs/celeba.ipynb
@@ -59,7 +59,7 @@
    "id": "60f54ea6",
    "metadata": {},
    "source": [
-    "### Run all\n",
+    "### Run All\n",
     "\n",
     "```bash\n",
     "cmd 'fedavg'; cmd 'fedsgd'; cmd 'fedela'; cmd 'fedprox'; cmd 'fedscaffold'\n",
