--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -63,7 +63,7 @@
    "id": "ad831d8a",
    "metadata": {},
    "source": [
-    "### Run all\n",
+    "### Run All\n",
     "\n",
     "```bash\n",
     "cmd 'fedavg'; cmd 'fedsgd'; cmd 'fedela'; cmd 'fedprox'; cmd 'fedscaffold'\n",
