--- a/docs/sent140.ipynb
+++ b/docs/sent140.ipynb
@@ -71,66 +71,10 @@
    "id": "741ceac5",
    "metadata": {},
    "source": [
-    "##  bag_log_reg"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c5f9be7",
-   "metadata": {},
-   "source": [
-    "### FedAvg\n",
+    "##  bag_log_reg\n",
     "\n",
     "```bash\n",
-    "cmd_bag_log_reg 'fedavg'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e24a8759",
-   "metadata": {},
-   "source": [
-    "### FedSgd\n",
-    "\n",
-    "```bash\n",
-    "cmd_bag_log_reg 'fedsgd'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6048188c",
-   "metadata": {},
-   "source": [
-    "### FedEla\n",
-    "\n",
-    "```bash\n",
-    "cmd_bag_log_reg 'fedela'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99a24993",
-   "metadata": {},
-   "source": [
-    "### FedProx\n",
-    "\n",
-    "```bash\n",
-    "cmd_bag_log_reg 'fedprox'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98960ebe",
-   "metadata": {},
-   "source": [
-    "### FedScaffold\n",
-    "\n",
-    "```bash\n",
-    "cmd_bag_log_reg 'fedscaffold'\n",
+    "cmd_bag_log_reg 'fedavg'; cmd_bag_log_reg 'fedsgd'; cmd_bag_log_reg 'fedela'; cmd_bag_log_reg 'fedprox'; cmd_bag_log_reg 'fedscaffold'\n",
     "```"
    ]
   },
@@ -265,66 +209,10 @@
    "id": "aaec252c",
    "metadata": {},
    "source": [
-    "## stacked_lstm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8456a937",
-   "metadata": {},
-   "source": [
-    "### FedAvg\n",
+    "## stacked_lstm\n",
     "\n",
     "```bash\n",
-    "cmd_stacked_lstm 'fedavg'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce6a67e2",
-   "metadata": {},
-   "source": [
-    "### FedSgd\n",
-    "\n",
-    "```bash\n",
-    "cmd_stacked_lstm 'fedsgd'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b37ce696",
-   "metadata": {},
-   "source": [
-    "### FedEla\n",
-    "\n",
-    "```bash\n",
-    "cmd_stacked_lstm 'fedela'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b2a9bc0",
-   "metadata": {},
-   "source": [
-    "### FedProx\n",
-    "\n",
-    "```bash\n",
-    "cmd_stacked_lstm 'fedprox'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "730c7341",
-   "metadata": {},
-   "source": [
-    "### FedScaffold\n",
-    "\n",
-    "```bash\n",
-    "cmd_stacked_lstm 'fedscaffold'\n",
+    "cmd_stacked_lstm 'fedavg'; cmd_stacked_lstm 'fedsgd'; cmd_stacked_lstm 'fedela'; cmd_stacked_lstm 'fedprox'; cmd_stacked_lstm 'fedscaffold'\n",
     "```"
    ]
   },
