--- a/docs/reddit.ipynb
+++ b/docs/reddit.ipynb
@@ -58,58 +58,10 @@
    "id": "0c5f9be7",
    "metadata": {},
    "source": [
-    "### FedAvg\n",
+    "### Run All\n",
     "\n",
     "```bash\n",
-    "cmd 'fedavg'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e24a8759",
-   "metadata": {},
-   "source": [
-    "### FedSgd\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedsgd'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6048188c",
-   "metadata": {},
-   "source": [
-    "### FedEla\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedela'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99a24993",
-   "metadata": {},
-   "source": [
-    "### FedProx\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedprox'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98960ebe",
-   "metadata": {},
-   "source": [
-    "### FedScaffold\n",
-    "\n",
-    "```bash\n",
-    "cmd 'fedscaffold'\n",
+    "cmd 'fedavg'; cmd 'fedsgd'; cmd 'fedela'; cmd 'fedprox'; cmd 'fedscaffold'\n",
     "```"
    ]
   },
