--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -5,7 +5,25 @@
    "id": "015f8053",
    "metadata": {},
    "source": [
-    "# mnist"
+    "# MNIST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d9a7f08",
+   "metadata": {},
+   "source": [
+    "## Data Download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2ca0ff4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -pv ../benchmakr/datasets/mnist/data/raw"
    ]
   },
   {
